--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: William Martins
+bio: Um entusiasta em velhas e novas tecnologias
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: Um blog sobre tecnologia e assuntos relacionados
 
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: assets/images/profile.png
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
+resume: false
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://koppl.in/indigo
+url: https://willmartinsmg.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -30,36 +30,36 @@ permalink: /:title/
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: mydisqus # enter this from your disqus account
+  shortname: disqus_ibjd22yISM # enter this from your disqus account
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+facebook: william.martins86
+twitter: willmartinsmg
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: willmartins
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: willmartinsmg
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: william.martins@me.com
 
 authors:
   johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
+    name: William Martins
+    bio: Um entusiasta em velhas e novas tecnologias
     external-image: false
-    picture: assets/images/profile.jpg
-    twitter: johndoe
+    picture: assets/images/profile.png
+    twitter: willmartinsmg
   jamesfoster:
     name: James Foster
     bio: A Man who develops software with coffee
