Atualização do post setup macos

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ github: willmartinsmg
 email: william.martins@me.com
 
 authors:
-  johndoe:
+  willmartinsmg:
     name: William Martins
     bio: Um entusiasta em velhas e novas tecnologias
     external-image: false
