--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,5 @@
 {
-  "endOfLine": "lf",
   "semi": false,
-  "singleQuote": false,
-  "tabWidth": 2,
-  "trailingComma": "es5"
+  "arrowParens": "always",
+  "singleQuote": true
 }
