--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,26 @@
-# editorconfig.org
+# http://editorconfig.org
+
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
-end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+indent_style = space
+indent_size = 4
+end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.hbs]
+insert_final_newline = false
+
+[*.json]
+indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.{yml,yaml}]
+indent_size = 2
+
+[Makefile]
+indent_style = tab
