--- a/package.json
+++ b/package.json
@@ -1,44 +1,75 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "gatsby": "^2.19.7",
-    "gatsby-image": "^2.2.39",
-    "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.4.3",
-    "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-sharp": "^2.3.13",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
-  },
-  "devDependencies": {
-    "prettier": "^1.19.1"
-  },
-  "keywords": [
-    "gatsby"
-  ],
+  "name": "gatsby-theme-ghost",
+  "description": "Minimalistic Gatsby theme, mobile and SEO friendly and supports author, tag and static pages",
+  "version": "1.0.2",
   "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
+  "author": "Akansh <me@akansh.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/akanshgulati/gatsby-theme-ghost.git"
+  },
+  "engines": {
+    "node": ">= 10.0.0"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/akanshgulati/gatbsy-theme-ghost/issues"
+  },
+  "keywords": [
+    "gatsby",
+    "ghost",
+    "theme",
+    "blog",
+    "minimalistic",
+    "template",
+    "gatsby-theme",
+    "gatsby-plugin"
+  ],
+  "main": "n/a",
+  "scripts": {
+    "serve": "gatsby build && NODE_ENV=production gatsby serve",
+    "build": "gatsby build",
+    "dev": "gatsby develop",
+    "lint": "eslint . --ext .js --cache --fix",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "gatsby": "2.8.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "eslint": "5.16.0",
+    "eslint-plugin-ghost": "0.2.0",
+    "eslint-plugin-react": "7.13.0"
+  },
+  "peerDependencies": {
+    "gatsby": "2.8.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
+  },
+  "dependencies": {
+    "@tryghost/helpers": "1.1.5",
+    "@tryghost/helpers-gatsby": "1.0.8",
+    "cheerio": "1.0.0-rc.3",
+    "disqus-react": "^1.0.5",
+    "gatsby-awesome-pagination": "0.3.4",
+    "gatsby-image": "2.1.2",
+    "gatsby-plugin-advanced-sitemap": "1.0.6",
+    "gatsby-plugin-feed": "2.2.2",
+    "gatsby-plugin-force-trailing-slashes": "1.0.4",
+    "gatsby-plugin-google-analytics": "^2.1.23",
+    "gatsby-plugin-manifest": "2.1.1",
+    "gatsby-plugin-offline": "2.1.1",
+    "gatsby-plugin-react-helmet": "3.0.12",
+    "gatsby-plugin-sharp": "2.2.14",
+    "gatsby-remark-autolink-headers": "^2.0.16",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^3.0.14",
+    "gatsby-remark-prismjs": "^3.2.10",
+    "gatsby-source-filesystem": "2.0.37",
+    "gatsby-source-ghost": "3.3.3",
+    "gatsby-transformer-remark": "^2.3.12",
+    "gatsby-transformer-sharp": "2.1.19",
+    "lodash": "4.17.11",
+    "react-helmet": "5.2.1",
+    "prismjs": "^1.16.0"
   }
 }
