--- a/package.json
+++ b/package.json
@@ -30,15 +30,17 @@
     "build": "gatsby build",
     "dev": "gatsby develop",
     "lint": "eslint . --ext .js --cache --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
-    "gatsby": "2.8.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
     "eslint": "5.16.0",
     "eslint-plugin-ghost": "0.2.0",
-    "eslint-plugin-react": "7.13.0"
+    "eslint-plugin-react": "7.13.0",
+    "gatsby": "2.8.2",
+    "gh-pages": "^3.1.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   },
   "peerDependencies": {
     "gatsby": "2.8.2",
@@ -69,7 +71,7 @@
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "2.1.19",
     "lodash": "4.17.11",
-    "react-helmet": "5.2.1",
-    "prismjs": "^1.16.0"
+    "prismjs": "^1.16.0",
+    "react-helmet": "5.2.1"
   }
 }
