--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tryghost/helpers": "1.1.5",
     "@tryghost/helpers-gatsby": "1.0.8",
     "cheerio": "1.0.0-rc.3",
+    "date-fns": "^2.16.1",
     "disqus-react": "^1.0.5",
     "gatsby-awesome-pagination": "0.3.4",
     "gatsby-image": "2.1.2",
