--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/akanshgulati/gatsby-theme-ghost.git"
   },
   "engines": {
-    "node": ">= 10.0.0"
+    "node": "12.13.0"
   },
   "bugs": {
     "url": "https://github.com/akanshgulati/gatbsy-theme-ghost/issues"
